--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -1,11 +1,11 @@
-.linkType {
+.linkType, .gitLinkType {
     color: rgb(17, 90, 30);
     font-size: 18px;
     text-align: center;
     font-weight: bold;
 }
 
-.linkText {
+.linkText, .gitLinkText {
     color: rgb(24, 134, 45);
     font-size: 18px;
     text-align: center;
@@ -29,19 +29,19 @@ img {
 }
 
 @media only screen and (min-width: 400px) {
-    .linkType, .linkText, .description {
+    .linkType, .linkText, .gitLinkType, .gitLinkText, .description {
       font-size: 20px;
     }
 }
 
 @media only screen and (min-width: 600px) {
-    .linkType, .linkText, .description {
+    .linkType, .linkText, .gitLinkType, .gitLinkText, .description {
       font-size: 24px;
     }
 }
 
 @media only screen and (min-width: 900px) {
-    .linkType, .linkText, .description {
+    .linkType, .linkText, .gitLinkType, .gitLinkText, .description {
       font-size: 30px;
     }
 }
